# terracomply

./: .gitignore  README.md
backend/: db.sqlite3
backend/api/: models.py  views.py
backend/api/migrations/: 0001_initial.py
backend/core/: settings.py
crewAI/: AML_inference.py  main.py  main1.py  main2.py  test.py
crewAI/Deal_listing_agent/: create_vector_db.py  query_script.py
crewAI/Deal_listing_agent/faiss_index/: index.faiss  index.pkl
crewAI/residential_property/: query_script.py
crewAI/residential_property/faiss_index/: index.faiss
crewAI/tenant_compliance/: main.py  query_script.py  vector_db_genration.py
crewAI/tenant_compliance/faiss_index/: index.pkl
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: compliance-models.tsx  header.tsx  hero-section.tsx  implementation-flow.tsx  query-interface.tsx  tech-stack.tsx
lora_finetune_AML/: .gitignore  Modelfile  fraud_detect.json  genrated_prompt1.py  main.py  preprocess.py  pyproject.toml  ss_1.py  synthetic_data_gen.py  train1.py  train3.py
lora_finetune_AML/data/: instruction.json
lora_finetune_AML/final_model_checkpoints/: adapter_config.json
residential_property/: query_script.py  vector_db_generation.py
residential_property/faiss_index/: index.pkl
tenant_compliance/: query_script.py
tenant_compliance/faiss_index/: index.faiss  index.pkl
