[project]
name = "lora-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "datasets>=4.0.0",
    "docling>=2.54.0",
    "langflow>=1.6.0",
    "litellm>=1.77.4",
    "peft>=0.17.1",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "trl>=0.23.0",
]
